# allezon

./: Cargo.toml  README.md
.github/workflows/: checks.yml
docs/: libs_research.md  specifications.md
src/: endpoints.rs  main.rs  mock.rs  scylla.rs  types.rs  utils.rs
src/endpoints/: mod.rs
src/mock/: mod.rs
src/scylla/: mod.rs
src/tests/: client.rs  dataset.rs  mod.rs  test_data.rs  utils.rs
