[package]
name = "allezon"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wprzytula/allezone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Network utilities
axum = "0.6"
axum-macros = "0.3"
reqwest = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# serde_with = "*"
# byteorder = "1.4"
# bytes = "1.4"
# num_enum = "0.5"
# uuid = { version = "1.0", features = ["v4"] }
# url = { version = "2.3.1", optional = true }

# Tokio
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3"

# Scylla
# scylla = { version = "0.8.0", features = ["default"]}

# Observability
tracing = "0.1" # use this for any logging/tracing
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# Errors
# anyhow = "1.0.70" # use this for weakly-typed errors

# Date and Time
chrono = { version = "0.4", features = ["serde"] }

# Monad!
either = "1.8"

# To be considered
# rand = "0.8.3"
# itertools = "0.10"
# async-trait = "0.1"
# serde = { version = "1.0", features = ["derive"] }
# serde_yaml = { version = "0.9.14", optional = true }


[dev-dependencies]
# ntest = "0.8.1"
# assert_matches = "1.5.0"